@@ -274,10 +274,15 @@ class WeatherMapLink extends WeatherMapItem
 		$x2=$map->nodes[$this->b->name]->x;
 		$y2=$map->nodes[$this->b->name]->y;
 		
-		if(is_null($x1)) { wm_warn("LINK ".$this->name." uses a NODE with no POSITION! [WMWARN35]\n"); return; }
-		if(is_null($y1)) { wm_warn("LINK ".$this->name." uses a NODE with no POSITION! [WMWARN35]\n"); return; }
-		if(is_null($x2)) { wm_warn("LINK ".$this->name." uses a NODE with no POSITION! [WMWARN35]\n"); return; }
-		if(is_null($y2)) { wm_warn("LINK ".$this->name." uses a NODE with no POSITION! [WMWARN35]\n"); return; }
+	    if (
+			is_null($x1)
+			|| is_null($y1)
+			|| is_null($x2)
+			|| is_null($y2)
+			) {
+            wm_warn("LINK " . $this->name . " uses a NODE with no POSITION! [WMWARN35]\n");
+            return;
+        }
 				
 		if( ($this->linkstyle=='twoway') && ($this->labeloffset_in < $this->labeloffset_out) && (intval($map->get_hint("nowarn_bwlabelpos"))==0) )
 		{
